--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Texto especial.</h1>
     </div>
     <div>
-      <h1>Texto secundario.</h1>
+      <h1 class="title">Texto secundario.</h1>
     </div>
   </body>
 </html>
