--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Herencia</title>
   </head>
   <body>
-    <div>
+    <div class="container">
       <h1>Texto especial.</h1>
     </div>
     <div>
       <h1 class="title">Texto secundario.</h1>
     </div>
+    <h3 class="title">Este es un h3.</h3>
+    <button class="btn-primary">Botoncito</button>
   </body>
 </html>
