--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <div>
       <h1 class="title">Texto secundario.</h1>
     </div>
-    <h3 class="title">Este es un h3.</h3>
+    <h3 class="title" id="special-title">Este es un h3.</h3>
     <button class="btn-primary">Botoncito</button>
+    <div class="modal">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nam
+        exercitationem! Alias, ipsam! Omnis magni quam suscipit tempore
+        obcaecati iste eligendi necessitatibus eius ab cum et nesciunt,
+        doloribus ducimus totam.
+      </p>
+      <button>X</button>
+    </div>
   </body>
 </html>
