--- a/index.html
+++ b/index.html
@@ -15,14 +15,56 @@
     </div>
     <h3 class="title" id="special-title">Este es un h3.</h3>
     <button class="btn-primary">Botoncito</button>
-    <div class="modal">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nam
-        exercitationem! Alias, ipsam! Omnis magni quam suscipit tempore
-        obcaecati iste eligendi necessitatibus eius ab cum et nesciunt,
-        doloribus ducimus totam.
-      </p>
-      <button>X</button>
+    <div class="modal-container">
+      <div class="modal">
+        <h1>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nam
+          exercitationem! Alias, ipsam! Omnis magni quam suscipit tempore
+          obcaecati iste eligendi necessitatibus eius ab cum et nesciunt,
+          doloribus ducimus totam.
+        </h1>
+        <button>X</button>
+      </div>
+      <div class="modal">
+        <h1>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nam
+          exercitationem! Alias, ipsam! Omnis magni quam suscipit tempore
+          obcaecati iste eligendi necessitatibus eius ab cum et nesciunt,
+          doloribus ducimus totam.
+        </h1>
+        <button>X</button>
+      </div>
+      <div class="modal">
+        <h1>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nam
+          exercitationem! Alias, ipsam! Omnis magni quam suscipit tempore
+          obcaecati iste eligendi necessitatibus eius ab cum et nesciunt,
+          doloribus ducimus totam.
+        </h1>
+        <button>X</button>
+      </div>
+    </div>
+    <div class="box-container">
+      <div class="box">div-1</div>
+      <div class="box">div-2</div>
+      <div class="box">div-3</div>
+      <div class="box">div-4</div>
+      <div class="box">div-5</div>
+      <div class="box">div-6</div>
+      <div class="box">div-7</div>
+      <div class="box">div-8</div>
+      <div class="box">div-9</div>
+      <div class="box">div-10</div>
+      <div class="box">div-11</div>
+      <div class="box">div-12</div>
+      <div class="box">div-13</div>
+      <div class="box">div-14</div>
+      <div class="box">div-15</div>
+      <div class="box">div-16</div>
+      <div class="box">div-17</div>
+      <div class="box">div-18</div>
+      <div class="box">div-19</div>
+      <div class="box">div-20</div>
     </div>
   </body>
 </html>
