--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
       <div class="box">div-19</div>
       <div class="box">div-20</div>
     </div>
+    <div style="height: 100vh; width: 100vw; background-color: black"></div>
   </body>
 </html>
